--- a/data/style.css
+++ b/data/style.css
@@ -4,11 +4,14 @@ body {
 }
 
 svg {
-	width: 100%;
+	width:600;
+	height:500;
+	margin:auto;
+	display:block;
 }
 
 button {
-	margin-left: 280px;
+	margin-left: 25px;
 	height: 30px;
 	font-family: arial-black;
 	fill: #6e6e6e;
@@ -18,5 +21,5 @@ button {
 .yAxisLabel {
 	font-size: 0.9em;
 	text-anchor: end;
-	
+
 }
