--- a/data/style.css
+++ b/data/style.css
@@ -1,4 +1,5 @@
 body {
+	margin-top:100px;
 	font-family: arial-black;
 	fill: #6e6e6e;
 }
@@ -11,8 +12,9 @@ svg {
 }
 
 #textbox {
+	padding:20;
 	float:left;
-	width: 400;
+	width: 360;
 	margin: auto;
 	display:block;
 	background-color: #E8E8E8;
