--- a/final-vis/styles.css
+++ b/final-vis/styles.css
@@ -39,5 +39,13 @@ body {
 }
 
 h1 {
-  font-family: NeueMontreal;
+    font-family: NeueMontreal;
+    font-size: 34;
+    text-align: center; 
+    font-weight: 500;
+}
+
+.autocomplete-suggestions {
+    background-color: white;
+    color: black; 
 }
